--- a/assets/css/templatemo-villa-agency.css
+++ b/assets/css/templatemo-villa-agency.css
@@ -359,11 +359,11 @@ Header Style
   padding-right: 25px;
 }
 
-.sub-header ul.info li:last-child {
+/* .sub-header ul.info li:last-child {
   margin-right: 0px;
   padding-right: 0px;
   border-right: none;
-}
+} */
 
 .sub-header ul.info li i {
   font-size: 20px;
@@ -444,9 +444,9 @@ Header Style
   z-index: 999;
 }
 
-.header-area .main-nav .nav li:last-child {
+/* .header-area .main-nav .nav li:last-child {
   padding-right: 0px;
-}
+} */
 
 .header-area .main-nav .nav li {
   padding-left: 10px;
@@ -473,17 +473,17 @@ Header Style
   letter-spacing: .25px;
 }
 
-.header-area .main-nav .nav li:last-child a {
-  /* background-color: #1e1e1e; */
-  /* color: #fff; */
+/* .header-area .main-nav .nav li:last-child a {
+  background-color: #1e1e1e;
+  color: #fff;
   font-size: 14px;
   font-weight: 400;
   text-transform: none;
   border-radius: 20px;
   padding-left: 0px;
-}
+} */
 
-.header-area .main-nav .nav li:last-child a i {
+/* .header-area .main-nav .nav li:last-child a i {
   background-color: #f35525;
   display: inline-block;
   width: 40px;
@@ -493,15 +493,15 @@ Header Style
   margin-right: 10px;
   border-radius: 50%;
   margin-left: -1px;
-}
+} */
 
-.header-area .main-nav .nav li:last-child:hover a {
+/* .header-area .main-nav .nav li:last-child:hover a {
   background-color: #1e1e1e;
 }
 
 .header-area .main-nav .nav li:last-child:hover a i {
   color: #fff;
-}
+} */
 
 .header-area .main-nav .nav li:hover a {
   color: #f35525;
@@ -692,11 +692,11 @@ Header Style
   .header-area.header-sticky .nav li.search-icon a {
     width: 100%;
   }
-  .header-area .nav li:last-child a {
+  /* .header-area .nav li:last-child a {
     background-color: transparent !important;
     font-weight: 300 !important;
     text-transform: capitalize !important;
-  }
+  } */
   .header-area {
     padding: 0px 15px;
     height: 80px;
@@ -1459,6 +1459,22 @@ Video Style
   height: 100vh; /* Adjust height as needed */
 }
 
+/* Ensuring col-lg-6 is always centered */
+.video-content .row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+/* Override Bootstrap’s col-lg-6 behavior */
+.video-content .col-lg-6 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%; /* ✅ Makes it take full width */
+}
+
 .video-frame {
   position: relative;
   width: 700px; /* Adjust as needed */
@@ -1518,10 +1534,11 @@ Video Style
 @media (max-width: 992px) {
   .video-content {
     height: 80vh; /* Reduce height */
-    margin-top: -250px; /* Adjust margin */
+    margin-top: -350px; /* Adjust margin */
   }
 
   .video-frame {
+    margin-left: 11px;
     width: 90%; /* Make width responsive */
     height: auto; /* Maintain aspect ratio */
   }
@@ -1535,6 +1552,7 @@ Video Style
   }
 
   .video-frame {
+    margin-left: 11px;
     width: 90%;
     height: auto;
   }
@@ -1554,6 +1572,7 @@ Video Style
   }
 
   .video-frame {
+    margin-left: 11px;
     width: 95%;
     height: auto;
   }
@@ -1567,12 +1586,17 @@ Video Style
 
 /* Small Mobile Devices (400px and below) */
 @media (max-width: 400px) {
+  .video{
+    height: 50vh;
+  }
+  
   .video-content {
     height: 50vh;
-    margin-top: -100px;
+    margin-top: -180px;
   }
 
   .video-frame {
+    /* margin-left: 11px; */
     width: 100%;
     height: auto;
   }
@@ -1803,6 +1827,127 @@ Properties Style
   text-align: center;
 }
 
+/* For tablets (width between 768px and 1024px) */
+@media (max-width: 1024px) {
+  .properties .item {
+    padding: 20px;
+    margin-bottom: 20px;
+  }
+
+  .properties .item img {
+    width: 100%;
+    height: auto;
+  }
+
+  .properties .item span.category {
+    font-size: 13px;
+    padding: 4px 10px;
+  }
+
+  .properties .item h4 {
+    font-size: 18px;
+    margin: 20px 0px;
+  }
+
+  .properties .item ul li {
+    font-size: 14px;
+    margin-right: 15px;
+  }
+
+  .properties .item h6 {
+    font-size: 18px;
+    margin-top: 20px;
+  }
+}
+
+/* For mobile screens (width less than 768px) */
+@media (max-width: 767px) {
+  .properties .item {
+    padding: 15px;
+    margin-bottom: 15px;
+  }
+
+  .properties .item img {
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+  }
+
+  .properties .item span.category {
+    font-size: 12px;
+    padding: 3px 8px;
+  }
+
+  .properties .item h4 {
+    font-size: 16px;
+    margin: 15px 0px;
+  }
+
+  .properties .item ul li {
+    font-size: 13px;
+    margin-right: 10px;
+  }
+
+  .properties .item ul {
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+  }
+
+  .properties .item h6 {
+    font-size: 16px;
+    margin-top: 15px;
+    float: none;
+    display: block;
+    text-align: center;
+  }
+
+  .properties .item .main-button {
+    text-align: center;
+  }
+}
+
+/* For small mobile screens (width less than 480px) */
+@media (max-width: 480px) {
+  .properties .item {
+    padding: 10px;
+    margin-bottom: 10px;
+  }
+
+  .properties .item img {
+    width: 100%;
+    height: auto;
+  }
+
+  .properties .item span.category {
+    font-size: 11px;
+    padding: 3px 6px;
+  }
+
+  .properties .item h4 {
+    font-size: 14px;
+    margin: 10px 0px;
+  }
+
+  .properties .item ul li {
+    font-size: 12px;
+    margin-right: 8px;
+  }
+
+  .properties .item ul {
+    margin-bottom: 15px;
+    padding-bottom: 15px;
+  }
+
+  .properties .item h6 {
+    font-size: 14px;
+    margin-top: 10px;
+    text-align: center;
+    float: none;
+    display: block;
+  }
+}
+
+
 
 /* 
 ---------------------------------------------
@@ -1811,13 +1956,14 @@ Contact Style
 */
 
 .contact {
-  background-image: url(../images/contact-bg.jpg);
+  background-image: url(../images/mpus/contact-banner.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
   padding: 100px 0px 250px 0px;
   position: relative;
 }
+
 
 .contact .section-heading h2 {
   color: #fff;
@@ -1963,8 +2109,8 @@ Page Header Style
 --------------------------------------------- 
 */
 
-.page-heading {
-  background-image: url(../images/page-heading-bg.jpg);
+.page-heading-G {
+  background-image: url(../images/mpus/gallery-banner.png);
   background-position: center bottom;
   background-repeat: no-repeat;
   background-size: cover;
@@ -1972,7 +2118,7 @@ Page Header Style
   text-align: center;
 }
 
-.page-heading span {
+.page-heading-G span {
   background-color: #fff;
   color: #1e1e1e;
   font-size: 14px;
@@ -1983,11 +2129,75 @@ Page Header Style
   margin-bottom: 30px;
 }
 
-.page-heading span a {
+.page-heading-G span a {
   color: #1e1e1e;
 }
 
-.page-heading h3 {
+.page-heading-G h3 {
+  font-size: 48px;
+  font-weight: 900;
+  text-transform: uppercase;
+  color: #fff;
+}
+
+/* for contact */
+.page-heading-C {
+  background-image: url(../images/mpus/contact-banner\ -\ Copy.png);
+  background-position: center bottom;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 110px 0px;
+  text-align: center;
+}
+
+.page-heading-C span {
+  background-color: #fff;
+  color: #1e1e1e;
+  font-size: 14px;
+  font-weight: 500;
+  text-transform: uppercase;
+  padding: 10px 25px;
+  display: inline-block;
+  margin-bottom: 30px;
+}
+
+.page-heading-C span a {
+  color: #1e1e1e;
+}
+
+.page-heading-C h3 {
+  font-size: 48px;
+  font-weight: 900;
+  text-transform: uppercase;
+  color: #fff;
+}
+
+/* for About */
+.page-heading-A {
+  background-image: url(../images/mpus/IMG-20250219-WA0015.jpg);
+  background-position: center bottom;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 110px 0px;
+  text-align: center;
+}
+
+.page-heading-A span {
+  background-color: #fff;
+  color: #1e1e1e;
+  font-size: 14px;
+  font-weight: 500;
+  text-transform: uppercase;
+  padding: 10px 25px;
+  display: inline-block;
+  margin-bottom: 30px;
+}
+
+.page-heading-A span a {
+  color: #1e1e1e;
+}
+
+.page-heading-A h3 {
   font-size: 48px;
   font-weight: 900;
   text-transform: uppercase;
@@ -2311,9 +2521,9 @@ body {
   .properties ul.properties-filter li {
     margin: 5px;
   }
-  .header-area .main-nav .nav li:last-child {
+  /* .header-area .main-nav .nav li:last-child {
     display: none;
-  }
+  } */
 }
 
 @media (max-width: 992px) {
@@ -2330,9 +2540,9 @@ body {
     padding-left: 3px;
     padding-right: 3px;
   }
-  .header-area .main-nav .nav li:last-child a {
+  /* .header-area .main-nav .nav li:last-child a {
     padding-right: 15px;
-  }
+  } */
   .main-banner .item h2 {
     width: 100%;
   }
@@ -2413,5 +2623,145 @@ body {
   }
   .contact-page .section-heading {
     margin-right: 100px;
+  }
+}
+
+
+/* 
+---------------------------------------------
+testimonials
+--------------------------------------------- 
+*/
+.test {
+  background-image: url(../images/mpus/test-banner.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  padding: 100px 0px 250px 0px;
+  position: relative;
+}
+/* Default Styles (for large screens) */
+.testimonia-sec {
+  min-height: 100vh;
+  /* background-color: rgb(233, 150, 150); */
+  font-family: 'Open Sans';
+}
+
+#demo {
+  background: linear-gradient(112deg, #ffffff 50%, #da7759 50%);
+  max-width: 900px;
+  margin: auto;
+  z-index: 2;
+  margin-top: -100px;
+}
+
+.carousel-caption {
+  position: initial;
+  z-index: 10;
+  padding: 5rem 8rem;
+  color: rgba(78, 77, 77, 0.856);
+  text-align: center;
+  font-size: 1.2rem;
+  font-style: italic;
+  font-weight: bold;
+  line-height: 2rem;
+}
+
+.carousel-caption img {
+  width: 6rem;
+  border-radius: 5rem;
+  margin-top: 2rem;
+}
+
+#image-caption {
+  font-style: normal;
+  font-size: 1rem;
+  margin-top: 0.5rem;
+}
+
+.i-t {
+  background-color: #f35525;
+  padding: 1.4rem;
+}
+
+/* Responsive Styles */
+
+/* Tablets (Portrait & Landscape) */
+@media (max-width: 1024px) {
+  .carousel-caption {
+    padding: 4rem 6rem;
+    font-size: 1rem;
+  }
+  
+  .carousel-caption img {
+    width: 5rem;
+    border-radius: 4.5rem;
+  }
+  
+  #image-caption {
+    font-size: 0.9rem;
+  }
+}
+
+/* Mobile Devices (Small to Medium) */
+@media (max-width: 768px) {
+  .carousel-caption {
+    padding: 3rem 2rem;
+    font-size: 0.9rem;
+    line-height: 1.7rem;
+  }
+  
+  .carousel-caption img {
+    width: 4rem;
+    border-radius: 4rem;
+    margin-top: 1rem;
+  }
+  
+  #image-caption {
+    font-size: 0.7rem;
+  }
+  
+  .i-t {
+    padding: 1rem;
+  }
+}
+
+/* Small Mobile Devices (Extra Small Screens) */
+@media (max-width: 480px) {
+  .carousel-caption {
+    padding: 2rem 1.5rem;
+    font-size: 0.7rem;
+    line-height: 1.5rem;
+  }
+  
+  .carousel-caption img {
+    width: 3rem;
+    border-radius: 3rem;
+    margin-top: 0.8rem;
+  }
+  
+  #image-caption {
+    font-size: 0.6rem;
+  }
+  
+  .i-t {
+    padding: 0.8rem;
+  }
+}
+
+/* Extra Small Devices (Very Small Phones) */
+@media (max-width: 360px) {
+  .carousel-caption {
+    padding: 1.5rem 1rem;
+    font-size: 0.6rem;
+  }
+  
+  .carousel-caption img {
+    width: 2.5rem;
+    border-radius: 2.5rem;
+  }
+  
+  #image-caption {
+    font-size: 0.5rem;
   }
 }
