--- a/assets/css/templatemo-villa-agency.css
+++ b/assets/css/templatemo-villa-agency.css
@@ -1652,7 +1652,7 @@ Fun Facts Style
   color: #f35525;
 }
 
-.fun-facts .counter:after {
+/* .fun-facts .counter:after {
   position: absolute;
   width: 50px;
   height: 50px;
@@ -1661,7 +1661,7 @@ Fun Facts Style
   content: '';
   right: -25px;
   top: -25px;
-}
+} */
 
 
 
@@ -1765,7 +1765,9 @@ Best Deal Style
 Properties Style
 --------------------------------------------- 
 */
-
+.properties{
+  margin-top: 18px !important;
+}
 .properties .item {
   background-color: #fafafa;
   border-radius: 10px;
